--- a/style.css
+++ b/style.css
@@ -33,4 +33,23 @@ body{
     border: 4px solid #aaa;
     border-radius: 10px;
     box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.15);
+    margin-top: 100px;
+    position: relative;
+}
+
+.button-kirby{
+    position: absolute;
+    top: -60px;
+    left: -120px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+    p{
+    flex-basis: 200px;
+    }
 }
