--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 img{
     max-width: 100%;
+    vertical-align: bottom;
 }
 
 body{
@@ -20,6 +21,7 @@ body{
 }
 
 .link-button{
+    display: block;
     width: fit-content;
     background-color: #e52c77;
     color: #fff;
@@ -35,6 +37,18 @@ body{
     box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.15);
     margin-top: 100px;
     position: relative;
+    text-decoration: none;
+    transition: all 0.25s ease-out;
+
+    p{
+        transition: all 0.25s ease-out;
+    }
+
+    &:hover{
+        background-color: #aaa;
+        border-color: #e52c77;
+        color: #e52c77;
+    }
 }
 
 .button-kirby{
@@ -47,9 +61,16 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
 
     p{
-    flex-basis: 200px;
+        flex-basis: 400px;
+        height: 100%;
+
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
