--- a/startsite/style.css
+++ b/startsite/style.css
@@ -57,6 +57,10 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: 1110px) {
+        height: 460px;
+    }
 }
 
 .top-text{
@@ -64,10 +68,18 @@ a {
     font-weight: bold;
     font-size: 24px;
     text-align: center;
+
+    @media screen and (max-width: 1110px) {
+        font-size: 20px;
+    }
 }
 
 .top-title{
     font-size: 160px;
+
+    @media screen and (max-width: 1110px) {
+        font-size: 80px;
+    }
 }
 
 .main{
@@ -75,18 +87,37 @@ a {
     align-items: center;
     margin: 0 auto;
     padding-top: 60px;
+
+    @media screen and (max-width: 1110px) {
+        width: 100%;
+        padding-inline: 6%;
+    }
+    @media screen and (max-width: 1110px) {
+        width: 100%;
+        padding-inline: 6%;
+    }
 }
 
 .news{
     display: flex;
-    padding-bottom: 55px;
+    padding-bottom: 95px;
+
+    @media screen and (max-width: 1110px) {
+        display: block;
+    }
 }
 
 .contents-title{
-    width: 256px;
+    width: 166px;
+    margin-right: 50px;
     color: #DD1B57;
     font-size: 40px;
     font-weight: bold;
+
+    @media screen and (max-width: 1110px) {
+        font-size: 32px;
+    }
+
 }
 
 .news-head{
@@ -97,6 +128,11 @@ a {
     padding-bottom: 15px;
     padding-top: 15px;
     font-size: 15px;
+
+    @media screen and (max-width: 1110px) {
+        width: 100%;
+        display: block;
+    }
 }
 
 .service{
@@ -105,20 +141,34 @@ a {
 
 .service-title{
     display: flex;
-    align-items: center;
 }
 
 .service-shadow{
-    margin-left: auto;
+    position: absolute;
+    z-index: -1;
+    right:0;
+    margin-top: -40px;
     color: #F2F2F2;
     font-size: 168px;
     font-weight: bold;
+
+    @media screen and (max-width: 1110px) {
+        font-size: 70px;
+        margin-top: 0px;
+    }
 }
 
 .service-contents{
-    margin-top: -38px;
     display: flex;
     gap: 30px;
+    margin-top: 50px;
+
+    @media screen and (max-width: 1110px) {
+        flex-wrap: wrap;
+    }
+    @media screen and (max-width: 768px) {
+     display: block;
+    }
 }
 
 .service-box{
@@ -129,6 +179,15 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #fff;
+
+    @media screen and (max-width: 1110px) {
+        width: 335px;
+        height: 246px;
+        margin-left:auto;
+        margin-right:auto;
+        margin-bottom: 20px;
+    }
 }
 
 .service-inbox{
@@ -159,6 +218,12 @@ a {
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: 14px;
+
+    @media screen and (max-width: 1110px) {
+        font-size: 12px;
+        padding-inline: 6%;
+    }
 }
 
 .footer-inbox{
@@ -171,8 +236,81 @@ a {
     display: flex;
     gap: 20px;
     margin-bottom: 30px;
+
 }
 
 .footer-link{
     color: white;
+}
+
+.message-top{
+    background-image: url("./assets/img/mv.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.message-title{
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+}
+
+.message-box{
+    justify-content: center;
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+
+.message-catch {
+    font-size: 40px;
+    font-weight: bold;
+    color: #DD1B57;
+
+}
+
+.message-explain{
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.message{
+    display: flex;
+    justify-content: center;
+}
+
+.ceo-box{
+width: 750px;
+
+}
+
+.ceo-icon{
+    float: left;
+    margin: 0 25px 0 0;
+
+    img{
+        width: 100px;
+        height: 100px;
+    }
+}
+
+.ceo-text{
+    font-size: 16px;
+}
+
+.ceo-link{
+    color: #349BF4;
+}
+
+.office{
+    width: 1110px;
+    height: 400px;
+    display: flex;
+    margin: 80px auto 100px auto;
 }
