--- a/startsite/style.css
+++ b/startsite/style.css
@@ -18,250 +18,273 @@ a {
     text-decoration: none;
     color: #333333;
     transition: all 0.25s ease-out;
+
+    &:hover {
+        opacity: 0.6;
+    }
 }
 
-.header{
-    width: 1440px;
+.header {
+    max-width: 1440px;
     height: 90px;
     display: flex;
     align-items: center;
-    margin: auto;
+    margin-inline: auto;
     padding-right: 70px;
     padding-left: 70px;
+
+    @media screen and (max-width: 768px) {
+        display: block;
+        height: 60px;
+        padding-top: 20px;
+        padding-right: 20px;
+    }
 }
 
-.header-logo{
-    width:167px;
+.header-logo {
+    width: 167px;
     margin-right: auto;
+
+    @media screen and (max-width: 768px) {
+        width: 107px;
+    }
 }
 
-.header-menu{
+.header-menu {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: end;
     gap: 30px;
-    font-weight:bold;
+    font-weight: bold;
+
+    @media screen and (max-width: 768px) {
+        display: block;
+        background-color: rgb(221, 27, 87);
+        position: fixed;
+        right: 0;
+        top: 0;
+        height: 100%;
+        padding: 100px 100px 0 100px;
+        font-weight: normal;
+    }
 }
 
-.home-link{
+.header-item{
+    @media screen and (max-width: 768px) {
+        display: block;
+        color: #fff;
+        margin-bottom: 25px;
+    }
+}
+
+.current {
     color: #DD1B57;
+
+    @media screen and (max-width: 768px) {
+        color: #C1AFDE;
+    }
 }
 
-.top{
+.top {
     background-image: url("./assets/img/mv.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    width: 100%;
     height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 203px;
+    text-align: center;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         height: 460px;
     }
 }
 
-.top-text{
+.top-title {
+    color: white;
+    font-size: 160px;
+
+    @media screen and (max-width: 1160px) {
+        font-size: 80px;
+    }
+}
+
+.top-text {
     color: white;
     font-weight: bold;
     font-size: 24px;
     text-align: center;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         font-size: 20px;
     }
 }
 
-.top-title{
-    font-size: 160px;
-
-    @media screen and (max-width: 1110px) {
-        font-size: 80px;
-    }
-}
-
-.main{
-    width: 1111px;
-    align-items: center;
+.contents-width {
+    max-width: 1111px;
     margin: 0 auto;
     padding-top: 60px;
 
-    @media screen and (max-width: 1110px) {
-        width: 100%;
-        padding-inline: 6%;
-    }
-    @media screen and (max-width: 1110px) {
-        width: 100%;
+    @media screen and (max-width: 1160px) {
         padding-inline: 6%;
     }
 }
 
-.news{
+.news {
     display: flex;
     padding-bottom: 95px;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         display: block;
     }
 }
 
-.contents-title{
+.contents-title {
     width: 166px;
+    margin-top: 0;
     margin-right: 50px;
     color: #DD1B57;
     font-size: 40px;
     font-weight: bold;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         font-size: 32px;
     }
-
 }
 
-.news-head{
-    width: 855px;
+.news-head {
+    margin-top: 5px;
+    max-width: 855px;
+    font-size: 15px;
+}
+
+.news-content {
     display: flex;
     gap: 20px;
-    border-bottom: 1px solid #E8E8E8;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    font-size: 15px;
-
-    @media screen and (max-width: 1110px) {
-        width: 100%;
-        display: block;
-    }
+    padding: 15px 15px 15px 0;
+    border-bottom: 1px solid #DDDDDD;
 }
 
-.service{
+.service {
     margin-bottom: 100px;
 }
 
-.service-title{
+.service-title {
     display: flex;
+    position: relative;
 }
 
-.service-shadow{
+.service-shadow {
     position: absolute;
     z-index: -1;
-    right:0;
-    margin-top: -40px;
+    right: 0;
+    top: -40px;
     color: #F2F2F2;
     font-size: 168px;
     font-weight: bold;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         font-size: 70px;
-        margin-top: 0px;
+        top: 0;
     }
 }
 
-.service-contents{
+.service-box {
     display: flex;
     gap: 30px;
     margin-top: 50px;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         flex-wrap: wrap;
+        align-items: center;
     }
     @media screen and (max-width: 768px) {
-     display: block;
+        display: block;
     }
 }
 
-.service-box{
+.service-inbox {
     width: 350px;
     height: 256px;
+    padding: 50px;
     border-radius: 10px;
     box-shadow: 0 0 10px #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #fff;
+    text-align: center;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         width: 335px;
         height: 246px;
-        margin-left:auto;
-        margin-right:auto;
+        padding: 40px 30px 40px 30px;
+        margin-left: auto;
+        margin-right: auto;
         margin-bottom: 20px;
     }
 }
 
-.service-inbox{
-    width: 250px;
-    text-align: center;
-    margin: auto;
-}
-
-.service-img{
+.service-img {
     width: 48px;
 }
 
-.service-heading{
+.service-heading {
     margin-top: 5px;
     font-size: 18px;
     font-weight: bold;
 }
 
-.service-text{
+.service-text {
     margin-top: 20px;
     font-size: 14px;
     text-align: left;
 }
 
-.footer{
+.footer {
     background-color: rgb(221, 27, 87);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: white;
     font-size: 14px;
+    align-items: center;
+    margin-right: auto;
+    padding: 60px 0 50px 165px;
 
-    @media screen and (max-width: 1110px) {
+    @media screen and (max-width: 1160px) {
         font-size: 12px;
         padding-inline: 6%;
     }
 }
 
-.footer-inbox{
-    margin-top: 60px;
-    margin-bottom: 50px;
-    width: 1111px;
-}
-
-.footer-menu{
+.footer-menu {
     display: flex;
     gap: 20px;
     margin-bottom: 30px;
-
 }
 
-.footer-link{
+.footer-link {
     color: white;
 }
+.message-width{
+    max-width: 1110px;
+    margin: 0 auto;
+    padding-inline: 6%;
+}
 
-.message-top{
+.banner {
     background-image: url("./assets/img/mv.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    width: 100%;
     height: 190px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.message-title{
     font-size: 40px;
     font-weight: bold;
     color: white;
+
+    @media screen and (max-width: 768px) {
+        font-size: 28px;
+        height: 160px;
+    }
 }
 
-.message-box{
+.message-box {
     justify-content: center;
     text-align: center;
     margin-top: 60px;
@@ -273,44 +296,148 @@ a {
     font-weight: bold;
     color: #DD1B57;
 
+    @media screen and (max-width: 768px) {
+        font-size: 24px;
+    }
 }
 
-.message-explain{
+.message-explain {
     font-size: 18px;
     margin-top: 20px;
+
+    @media screen and (max-width: 768px) {
+        font-size: 15px;
+    }
 }
 
-.message{
+.message {
     display: flex;
     justify-content: center;
 }
 
-.ceo-box{
-width: 750px;
-
+.ceo-box {
+    width: 750px;
 }
 
-.ceo-icon{
+.ceo-icon {
     float: left;
-    margin: 0 25px 0 0;
+    padding-right: 25px;
+    padding-bottom: 25px;
 
-    img{
+    img {
         width: 100px;
         height: 100px;
     }
 }
 
-.ceo-text{
+.ceo-text {
     font-size: 16px;
+    line-height: 25.6px;
+    letter-spacing: 5%;
+
+    @media screen and (max-width: 768px) {
+        font-size: 15px;
+        line-height: 24px;
+    }
 }
 
-.ceo-link{
+.ceo-link {
     color: #349BF4;
 }
 
-.office{
-    width: 1110px;
-    height: 400px;
+.office {
+    max-width: 1110px;
     display: flex;
-    margin: 80px auto 100px auto;
+    padding-top: 80px;
+    padding-bottom: 100px;
+    margin:auto;
+
+    img{
+        height: 400px;
+        object-fit: cover;
+        padding-inline: 6%;
+    }
+
+    @media screen and (max-width: 768px) {
+        padding-top: 50px;
+        padding-bottom: 60px;
+
+        img{
+            height: 366px;
+            object-fit: cover;
+        }
+    }
 }
+
+.profile {
+    border-collapse: collapse;
+    max-width: 1110px;
+    width: 100%;
+    margin: 60px auto 50px auto;
+    font-size: 15px;
+
+    @media screen and (max-width: 1160px) {
+        width: 94%;
+        font-size: 14px;
+    }
+
+    th,td{
+        padding: 30px;
+        border-bottom: 1px solid #DDDDDD;
+        text-align: left;
+
+        @media screen and (max-width: 768px) {
+            padding: 20px 20px 20px 0;
+        }
+    }
+
+    th{
+        @media screen and (max-width: 768px) {
+            min-width: 130px;
+        }
+    }
+}
+
+.map {
+    position: relative;
+    max-width: 1110px;
+    height: 437px;
+    margin: auto;
+    z-index: -1;
+
+    @media screen and (max-width: 1160px) {
+        width: 94%;
+        height: 329px;
+    }
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.p-news-head {
+    max-width: 1110px;
+    margin: 35px auto 100px auto;
+    font-size: 15px;
+
+    @media screen and (max-width: 1160px) {
+        width: 94%;
+    }
+}
+
+.p-news-content {
+    display: flex;
+    max-width: 1110px;
+    gap: 20px;
+    padding: 15px 15px 15px 0;
+    border-bottom: 1px solid #DDDDDD;
+
+    @media screen and (max-width: 1160px) {
+        display: block;
+    }
+}
+
